[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.9"
thiserror = "1.0.30"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]
